--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "vite build && npm run json-server",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "start": "json-server --watch db.json --port 8000"
+    "start": "json-server --watch db.json --port 8000",
+    "json-server": "json-server --watch db.json --port 8000"
   },
   "dependencies": {
     "@emotion/react": "^11.11.1",
